Updated reaction handeling - list of dictionaries.

--- a/PrototypingMaterialsFDS.ipynb
+++ b/PrototypingMaterialsFDS.ipynb
@@ -15,7 +15,9 @@
     "The `fds_matl` class shall contain the different components that make up the `&MATL` definitions used in FDS input files. The user should ideally be able to supply parameter values to this class and receive the appropriate input lines, such that they can be directly used in FDS.\n",
     "The `matl_components` class serves as a container for the `&MATL` definition pieces. It allows for easy access by utilising the \"dot notation\". The pieces themselves are strings with placeholders, aimed to be replaced by utelising `format()`.\n",
     "\n",
-    "Reactions as lists?"
+    "Reactions as lists?\n",
+    "\n",
+    "Also: Some interactivity in this notebook would be nice. Parameters could be entered and by clicking a button an text file, possibly immediately a FDS input file, would be created and written to a specified directory. Furthermore, the text file's content could be presented within the notebook and could thus maybe used as online tool, if it gets interpreted via GitHub correctly - needs to be tested. "
    ]
   },
   {
@@ -407,8 +409,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Question is how to deal with possible multiple reactions. \n",
+    "\n",
+    "Attempt to have them provided as list of lists. A more flexible approach might be better, but fo now I have no idea how it could be done (list of dictionaries?). The dictionaries- approach could be good. The class could get a method to build the dictionaries, as conveniance functionality. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +447,7 @@
        " '      EMISSIVITY = 0.5 /']"
       ]
      },
-     "execution_count": 203,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -486,6 +497,34 @@
     "        self.mp = {'init': self.init, \n",
     "                   'density': self.density, \n",
     "                   'emissivity': emissivity}\n",
+    "        \n",
+    "        self.reactions = []\n",
+    "    \n",
+    "    def add_reaction(self, a=None, e=None, n_s=None, \n",
+    "                     nu_matl=None, matl_id=None, nu_spec=None, \n",
+    "                     spec_id=None, heat_of_comb=None, \n",
+    "                     heat_of_reac=None):\n",
+    "        \n",
+    "        self.a = a\n",
+    "        self.e = e\n",
+    "        self.n_s = n_s\n",
+    "        self.nu_matl = nu_matl\n",
+    "        self.matl_id = matl_id\n",
+    "        self.nu_spec = nu_spec\n",
+    "        self.spec_id = spec_id\n",
+    "        self.heat_of_comb = heat_of_comb\n",
+    "        self.heat_of_reac = heat_of_reac\n",
+    "        \n",
+    "        new_reac = {'a': self.a, \n",
+    "                    'e': self.e, \n",
+    "                    'nu_matl': self.nu_matl, \n",
+    "                    'matl_id': self.matl_id, \n",
+    "                    'nu_spec': self.nu_spec, \n",
+    "                    'spec_id': self.spec_id, \n",
+    "                    'heat_of_comb': self.heat_of_comb, \n",
+    "                    'heat_of_reac': self.heat_of_reac}\n",
+    "        \n",
+    "        self.reactions.append(new_reac)\n",
     "    \n",
     "    def compile_matl(self, show=False):\n",
     "        matl_lines = []\n",
@@ -510,6 +549,25 @@
     "        \n",
     "        return matl_lines\n",
     "    \n",
+    "    def show_reactions(self):\n",
+    "        \n",
+    "        string_temp = \"  {}: {}\\n\"\n",
+    "        reac_out = '\\n' \\\n",
+    "                   '* Reactions overview:\\n' \\\n",
+    "                   '  Total: {} reactions\\n'.format(len(self.reactions))\n",
+    "            \n",
+    "        for i in range(len(self.reactions)):\n",
+    "            reac_out += '\\n' \\\n",
+    "                        '* Reaction: {}\\n' \\\n",
+    "                        '  Parameter: value\\n' \\\n",
+    "                        '------------------\\n'.format(i+1)\n",
+    "            \n",
+    "            for j in self.reactions[i]:\n",
+    "                reac_out += string_temp.format(j, self.reactions[i]['{}'.format(j)])\n",
+    "            \n",
+    "        reac_out += '------------------\\n\\n'\n",
+    "        print(reac_out)\n",
+    "    \n",
     "    def __str__(self):\n",
     "        \"\"\"\n",
     "        Provide overview over the parameters and values\n",
@@ -531,6 +589,68 @@
     "\n",
     "nml = fm2.compile_matl(show=True)\n",
     "nml"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* Parameter: value\n",
+      "------------------\n",
+      "  init: MaterialTest02\n",
+      "  density: 200.0\n",
+      "  emissivity: 0.5\n",
+      "------------------\n",
+      "\n",
+      "\n",
+      "\n",
+      "* Reactions overview:\n",
+      "  Total: 2 reactions\n",
+      "\n",
+      "* Reaction: 1\n",
+      "  Parameter: value\n",
+      "------------------\n",
+      "  a: 1200.0\n",
+      "  e: 200\n",
+      "  nu_matl: None\n",
+      "  matl_id: None\n",
+      "  nu_spec: None\n",
+      "  spec_id: None\n",
+      "  heat_of_comb: None\n",
+      "  heat_of_reac: None\n",
+      "\n",
+      "* Reaction: 2\n",
+      "  Parameter: value\n",
+      "------------------\n",
+      "  a: 2200.0\n",
+      "  e: 400\n",
+      "  nu_matl: None\n",
+      "  matl_id: None\n",
+      "  nu_spec: None\n",
+      "  spec_id: None\n",
+      "  heat_of_comb: None\n",
+      "  heat_of_reac: None\n",
+      "------------------\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "fm3 = None\n",
+    "fm3 = fds_matl_2('MaterialTest02', density=200., emissivity=0.5)\n",
+    "\n",
+    "fm3.add_reaction(a=12e+2,e=200)\n",
+    "fm3.add_reaction(a=22e+2,e=400)\n",
+    "\n",
+    "print(fm3)\n",
+    "# print(fm3.reactions)\n",
+    "fm3.show_reactions()"
    ]
   },
   {
