--- a/PrototypingMaterialsFDS.ipynb
+++ b/PrototypingMaterialsFDS.ipynb
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -429,25 +429,25 @@
       "* Parameter: value\n",
       "------------------\n",
       "  init: MaterialTest01\n",
-      "  density: 200.0\n",
-      "  emissivity: 0.5\n",
+      "  density: 100.0\n",
+      "  emissivity: 0.1\n",
       "------------------\n",
       "\n",
       "\n",
       "&MATL ID = 'MaterialTest01',\n",
-      "      DENSITY = 200.0,\n",
-      "      EMISSIVITY = 0.5 /\n"
+      "      DENSITY = 100.0,\n",
+      "      EMISSIVITY = 0.1 /\n"
      ]
     },
     {
      "data": {
       "text/plain": [
        "[\"&MATL ID = 'MaterialTest01',\",\n",
-       " '      DENSITY = 200.0,',\n",
-       " '      EMISSIVITY = 0.5 /']"
+       " '      DENSITY = 100.0,',\n",
+       " '      EMISSIVITY = 0.1 /']"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -499,6 +499,19 @@
     "                   'emissivity': emissivity}\n",
     "        \n",
     "        self.reactions = []\n",
+    "        \n",
+    "        # Attempt to handle cases with only one reaction.\n",
+    "        self.reac_param_base = [self.a, self.e, self.n_s,\n",
+    "                           self.nu_matl, self.matl_id, self.nu_spec,\n",
+    "                           self.spec_id, self.heat_of_comb,\n",
+    "                           self.heat_of_reac]\n",
+    "        for i in self.reac_param_base:\n",
+    "            if i is not None:\n",
+    "                self.add_reaction(self.a, self.e, self.n_s,\n",
+    "                                  self.nu_matl, self.matl_id, self.nu_spec,\n",
+    "                                  self.spec_id, self.heat_of_comb,\n",
+    "                                  self.heat_of_reac)\n",
+    "                break\n",
     "    \n",
     "    def add_reaction(self, a=None, e=None, n_s=None, \n",
     "                     nu_matl=None, matl_id=None, nu_spec=None, \n",
@@ -554,7 +567,7 @@
     "        string_temp = \"  {}: {}\\n\"\n",
     "        reac_out = '\\n' \\\n",
     "                   '* Reactions overview:\\n' \\\n",
-    "                   '  Total: {} reactions\\n'.format(len(self.reactions))\n",
+    "                   '  Total: {} reaction(s)\\n'.format(len(self.reactions))\n",
     "            \n",
     "        for i in range(len(self.reactions)):\n",
     "            reac_out += '\\n' \\\n",
@@ -584,7 +597,7 @@
     "        return output\n",
     "\n",
     "\n",
-    "fm2 = fds_matl_2('MaterialTest01', density=200., emissivity=0.5)\n",
+    "fm2 = fds_matl_2('MaterialTest01', density=100., emissivity=0.1)\n",
     "print(fm2)\n",
     "\n",
     "nml = fm2.compile_matl(show=True)\n",
@@ -593,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -604,18 +617,18 @@
       "------------------\n",
       "  init: MaterialTest02\n",
       "  density: 200.0\n",
-      "  emissivity: 0.5\n",
+      "  emissivity: 0.2\n",
       "------------------\n",
       "\n",
       "\n",
       "\n",
       "* Reactions overview:\n",
-      "  Total: 2 reactions\n",
+      "  Total: 2 reaction(s)\n",
       "\n",
       "* Reaction: 1\n",
       "  Parameter: value\n",
       "------------------\n",
-      "  a: 1200.0\n",
+      "  a: 120.0\n",
       "  e: 200\n",
       "  nu_matl: None\n",
       "  matl_id: None\n",
@@ -627,8 +640,8 @@
       "* Reaction: 2\n",
       "  Parameter: value\n",
       "------------------\n",
-      "  a: 2200.0\n",
-      "  e: 400\n",
+      "  a: 221.0\n",
+      "  e: 210\n",
       "  nu_matl: None\n",
       "  matl_id: None\n",
       "  nu_spec: None\n",
@@ -643,14 +656,62 @@
    ],
    "source": [
     "fm3 = None\n",
-    "fm3 = fds_matl_2('MaterialTest02', density=200., emissivity=0.5)\n",
+    "fm3 = fds_matl_2('MaterialTest02', density=200., emissivity=0.2)\n",
     "\n",
-    "fm3.add_reaction(a=12e+2,e=200)\n",
-    "fm3.add_reaction(a=22e+2,e=400)\n",
+    "fm3.add_reaction(a=1.2e+2,e=200)\n",
+    "fm3.add_reaction(a=2.21e+2,e=210)\n",
     "\n",
     "print(fm3)\n",
     "# print(fm3.reactions)\n",
     "fm3.show_reactions()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* Parameter: value\n",
+      "------------------\n",
+      "  init: MaterialTest03\n",
+      "  density: 300.0\n",
+      "  emissivity: 0.3\n",
+      "------------------\n",
+      "\n",
+      "\n",
+      "\n",
+      "* Reactions overview:\n",
+      "  Total: 1 reaction(s)\n",
+      "\n",
+      "* Reaction: 1\n",
+      "  Parameter: value\n",
+      "------------------\n",
+      "  a: 320.0\n",
+      "  e: 600\n",
+      "  nu_matl: None\n",
+      "  matl_id: None\n",
+      "  nu_spec: None\n",
+      "  spec_id: None\n",
+      "  heat_of_comb: None\n",
+      "  heat_of_reac: None\n",
+      "------------------\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "fm4 = None\n",
+    "fm4 = fds_matl_2('MaterialTest03', density=300., emissivity=0.3, a=3.2e+2,e=600)\n",
+    "\n",
+    "\n",
+    "print(fm4)\n",
+    "# print(fm4.reactions)\n",
+    "fm4.show_reactions()"
    ]
   },
   {
