--- a/PrototypingMaterialsFDS.ipynb
+++ b/PrototypingMaterialsFDS.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -100,7 +100,7 @@
        "\"      SPEC_ID(1,1) = 'test'\""
       ]
      },
-     "execution_count": 66,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
        "\"      SPEC_ID({},{}) = '{}'\""
       ]
      },
-     "execution_count": 67,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
        "'TestMatl'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +202,7 @@
        "<function __main__.fds_matl.compile_matl>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
        "[\"&MATL ID = 'TestMatl'\"]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,28 +267,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'init' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-9-19f3d006bcd3>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0minit\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'init' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "init"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +309,7 @@
        "'None'"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +338,7 @@
        "2"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +358,7 @@
        "'None'"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,12 +400,12 @@
    "source": [
     "Question is how to deal with possible multiple reactions. \n",
     "\n",
-    "Attempt to have them provided as list of lists. A more flexible approach might be better, but fo now I have no idea how it could be done (list of dictionaries?). The dictionaries- approach could be good. The class could get a method to build the dictionaries, as conveniance functionality. "
+    "Attempt to have them provided as list of lists. A more flexible approach might be better, but for now I have no idea how it could be done (list of dictionaries?). The dictionaries- approach could be good. The class could get a method to build the dictionaries, as conveniance functionality. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -434,6 +420,8 @@
       "------------------\n",
       "\n",
       "\n",
+      "0\n",
+      "no reac\n",
       "&MATL ID = 'MaterialTest01',\n",
       "      DENSITY = 100.0,\n",
       "      EMISSIVITY = 0.1 /\n"
@@ -447,7 +435,7 @@
        " '      EMISSIVITY = 0.1 /']"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,18 +460,17 @@
     "                 'heat_of_reac': \"HEAT_OF_REACTION({}) = {}\"}\n",
     "    \n",
     "    def __init__(self, init, density=None, emissivity=None, \n",
-    "                 conductivity=None, specific_heat=None, \n",
-    "                 n_reactions=None, a=None, e=None, n_s=None, \n",
-    "                 nu_matl=None, matl_id=None, nu_spec=None, \n",
-    "                 spec_id=None, heat_of_comb=None, \n",
-    "                 heat_of_reac=None):\n",
+    "                 conductivity=None, specific_heat=None,\n",
+    "                 a=None, e=None, n_s=None, nu_matl=None, \n",
+    "                 matl_id=None, nu_spec=None, spec_id=None, \n",
+    "                 heat_of_comb=None, heat_of_reac=None):\n",
     "        \n",
     "        self.init = init\n",
     "        self.density = density\n",
     "        self.emissivity = emissivity\n",
     "        self.conductivity = conductivity\n",
     "        self.specific_heat = specific_heat\n",
-    "        self.n_reactions = n_reactions\n",
+    "        self.n_reactions = None\n",
     "        self.a = a\n",
     "        self.e = e\n",
     "        self.n_s = n_s\n",
@@ -494,17 +481,30 @@
     "        self.heat_of_comb = heat_of_comb\n",
     "        self.heat_of_reac = heat_of_reac\n",
     "        \n",
+    "        self.param_base = [self.init, self.density, \n",
+    "                           self.emissivity, self.conductivity, \n",
+    "                           self.specific_heat, \n",
+    "                           self.heat_of_comb, self.heat_of_reac]\n",
+    "        \n",
+    "        self.param_base_dict = {'init': self.init, \n",
+    "                                'density': self.density, \n",
+    "                                'emissivity': self.emissivity, \n",
+    "                                'conductivity': self.conductivity, \n",
+    "                                'specific_heat': self.specific_heat, \n",
+    "                                'heat_of_comb': self.heat_of_comb, \n",
+    "                                'heat_of_reac': self.heat_of_reac}\n",
+    "        \n",
     "        self.mp = {'init': self.init, \n",
     "                   'density': self.density, \n",
-    "                   'emissivity': emissivity}\n",
+    "                   'emissivity': self.emissivity}\n",
     "        \n",
     "        self.reactions = []\n",
     "        \n",
     "        # Attempt to handle cases with only one reaction.\n",
     "        self.reac_param_base = [self.a, self.e, self.n_s,\n",
-    "                           self.nu_matl, self.matl_id, self.nu_spec,\n",
-    "                           self.spec_id, self.heat_of_comb,\n",
-    "                           self.heat_of_reac]\n",
+    "                                self.nu_matl, self.matl_id, self.nu_spec,\n",
+    "                                self.spec_id, self.heat_of_comb,\n",
+    "                                self.heat_of_reac]\n",
     "        for i in self.reac_param_base:\n",
     "            if i is not None:\n",
     "                self.add_reaction(self.a, self.e, self.n_s,\n",
@@ -541,16 +541,20 @@
     "    \n",
     "    def compile_matl(self, show=False):\n",
     "        matl_lines = []\n",
+    "        num_reac = len(self.reactions)\n",
     "        \n",
-    "        for component in self.mp:\n",
+    "        if num_reac is 0:\n",
+    "            print('no reac')\n",
+    "        \n",
+    "        for component in self.param_base_dict:\n",
     "            idfr = '{}'.format(component)\n",
     "            \n",
-    "            if self.mp[idfr] is not None:\n",
+    "            if self.param_base_dict[idfr] is not None:\n",
     "                comp = self.matl_temp[idfr]\n",
     "                if component is not 'init':\n",
     "                    comp = '      ' + comp\n",
     "                \n",
-    "                new_c = comp.format(self.mp[idfr])+','\n",
+    "                new_c = comp.format(self.param_base_dict[idfr])+','\n",
     "                #print(new_c)\n",
     "                matl_lines.append(new_c)\n",
     "        \n",
@@ -561,6 +565,29 @@
     "                print(line)\n",
     "        \n",
     "        return matl_lines\n",
+    "\n",
+    "#     def compile_matl(self, show=False):\n",
+    "#         matl_lines = []\n",
+    "        \n",
+    "#         for component in self.mp:\n",
+    "#             idfr = '{}'.format(component)\n",
+    "            \n",
+    "#             if self.mp[idfr] is not None:\n",
+    "#                 comp = self.matl_temp[idfr]\n",
+    "#                 if component is not 'init':\n",
+    "#                     comp = '      ' + comp\n",
+    "                \n",
+    "#                 new_c = comp.format(self.mp[idfr])+','\n",
+    "#                 #print(new_c)\n",
+    "#                 matl_lines.append(new_c)\n",
+    "        \n",
+    "#         matl_lines[-1] = matl_lines[-1][:-1] + ' /'\n",
+    "        \n",
+    "#         if show is True:\n",
+    "#             for line in matl_lines:\n",
+    "#                 print(line)\n",
+    "        \n",
+    "#         return matl_lines\n",
     "    \n",
     "    def show_reactions(self):\n",
     "        \n",
@@ -583,8 +610,8 @@
     "    \n",
     "    def __str__(self):\n",
     "        \"\"\"\n",
-    "        Provide overview over the parameters and values\n",
-    "        stored within this objects instance.\n",
+    "        Provide complete overview over the parameters and \n",
+    "        values stored within this objects instance.\n",
     "        \"\"\"\n",
     "        \n",
     "        string_temp = \"  {}: {}\\n\"\n",
@@ -606,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -668,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
