Adjustments to MATL. Started working on SURF.

--- a/PrototypingMaterialsFDS.ipynb
+++ b/PrototypingMaterialsFDS.ipynb
@@ -23,9 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
@@ -48,9 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "class matl_components:\n",
@@ -136,9 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "class fds_matl:\n",
@@ -221,9 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def compile_matl(initialise = None,\n",
@@ -276,18 +268,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "class matl_para:\n",
@@ -304,9 +292,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "mpar = matl_para()"
@@ -335,9 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "mpar.mp['density'] = 2"
@@ -387,9 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "class matl_components2:\n",
@@ -415,15 +397,80 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class FDSSURF:\n",
+    "    \n",
+    "    surf_temp = {'init': \"&SURF ID = '{}'\", \n",
+    "                 'ext_flux': \"EXTERNAL_FLUX = {}\", \n",
+    "                 'rgb': \"RGB = {}\", \n",
+    "                 'backing': \"BACKING = '{}'\", \n",
+    "                 'cell_size_fac': \"CELL_SIZE_FACTOR = {}\", \n",
+    "                 'burn_away': \"BURN_AWAY = .{}.\", \n",
+    "                 'layer_div': \"LAYER_DIVIDE = {}\", \n",
+    "                 'thickness': \"THICKNESS({}) = {}\", \n",
+    "                 'matl_id': \"MATL_ID({}) = '{}'\", \n",
+    "                 'matl_mass_frac': \"MATL_MASS_FRACTION({}) = '{}'\", }\n",
+    "    \n",
+    "    def __init__(self, init, ext_flux=None, rgb=None, \n",
+    "                 backing=None, cell_size_fac=None, burn_away=None, \n",
+    "                 layer_div=None, thickness=None, matl_id=None, \n",
+    "                 matl_mass_frac=None,):\n",
+    "        \n",
+    "        self.init = init\n",
+    "        self.ext_flux = ext_flux\n",
+    "        self.rgb = rgb\n",
+    "        self.backing = backing\n",
+    "        self.cell_size_fac = cell_size_fac\n",
+    "        self.burn_away = burn_away\n",
+    "        self.layer_div = layer_div\n",
+    "        self.thickness = thickness\n",
+    "        self.matl_id = matl_id\n",
+    "        self.matl_mass_frac = matl_mass_frac\n",
+    "        \n",
+    "    self.param_base = [['init', self.init], \n",
+    "                       ['ext_flux', self.ext_flux], \n",
+    "                       ['rgb', self.rgb], \n",
+    "                       ['backing', self.backing], \n",
+    "                       ['cell_size_fac', self.cell_size_fac],\n",
+    "                       ['burn_away', self.burn_away],\n",
+    "                       ['layer_div', self.layer_div],\n",
+    "                       ['thickness', self.thickness],\n",
+    "                       ['matl_id', self.matl_id],\n",
+    "                       ['matl_mass_frac', self.matl_mass_frac],]\n",
+    "        \n",
+    "    self.param_base_dict = {'init': self.init, \n",
+    "                            'ext_flux': self.ext_flux, \n",
+    "                            'rgb': self.rgb, \n",
+    "                            'backing': self.backing, \n",
+    "                            'cell_size_fac': self.cell_size_fac,\n",
+    "                            'burn_away': self.burn_away,\n",
+    "                            'layer_div': self.layer_div,\n",
+    "                            'thickness': self.thickness,\n",
+    "                            'matl_id': self.matl_id,\n",
+    "                            'matl_mass_frac': self.matl_mass_frac,}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Question is how to deal with possible multiple reactions. \n",
     "\n",
-    "Attempt to have them provided as list of lists. A more flexible approach might be better, but for now I have no idea how it could be done (list of dictionaries?). The dictionaries- approach could be good. The class could get a method to build the dictionaries, as conveniance functionality. "
+    "Attempt to have them provided as list of lists. A more flexible approach might be better, but for now I have no idea how it could be done (list of dictionaries?). \n",
+    "\n",
+    "The dictionaries- approach could be good. The class could get a method to build the dictionaries, as conveniance functionality. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -433,33 +480,36 @@
       "* Parameter: value\n",
       "------------------\n",
       "  init: MaterialTest01\n",
-      "  density: 100.0\n",
       "  emissivity: 0.1\n",
+      "  density: 100.0\n",
+      "  conductivity: None\n",
+      "  specific_heat: 4.19\n",
       "------------------\n",
       "\n",
       "\n",
       "&MATL ID = 'MaterialTest01',\n",
-      "      DENSITY = 100.0,\n",
       "      EMISSIVITY = 0.1,\n",
+      "      DENSITY = 100.0,\n",
       "      SPECIFIC_HEAT = 4.19,\n",
       "      N_REACTIONS = 1,\n",
       "      A(1) = 10000,\n",
-      "      HEAT_OF_COMBUSTION(1) = 42000 /\n"
+      "      HEAT_OF_COMBUSTION(1) = 42000 /\n",
+      "\n"
      ]
     },
     {
      "data": {
       "text/plain": [
        "[\"&MATL ID = 'MaterialTest01',\",\n",
-       " '      DENSITY = 100.0,',\n",
        " '      EMISSIVITY = 0.1,',\n",
+       " '      DENSITY = 100.0,',\n",
        " '      SPECIFIC_HEAT = 4.19,',\n",
        " '      N_REACTIONS = 1,',\n",
        " '      A(1) = 10000,',\n",
-       " '      HEAT_OF_COMBUSTION(1) = 42000 /']"
+       " '      HEAT_OF_COMBUSTION(1) = 42000 /\\n']"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,10 +526,10 @@
     "                 'a': \"A({}) = {}\", \n",
     "                 'e': \"E({}) = {}\", \n",
     "                 'n_s': \"N_S({}) = {}\", \n",
-    "                 'nu_matl': \"NU_MATL({},{}) = {}\", \n",
-    "                 'matl_id': \"MATL_ID({},{}) = '{}'\", \n",
-    "                 'nu_spec': \"NU_SPEC({},{}) = {}\", \n",
-    "                 'spec_id': \"SPEC_ID({},{}) = '{}'\", \n",
+    "                 'nu_matl': \"NU_MATL({}) = {}\", \n",
+    "                 'matl_id': \"MATL_ID({}) = '{}'\", \n",
+    "                 'nu_spec': \"NU_SPEC({}) = {}\", \n",
+    "                 'spec_id': \"SPEC_ID({}) = '{}'\", \n",
     "                 'heat_of_comb': \"HEAT_OF_COMBUSTION({}) = {}\", \n",
     "                 'heat_of_reac': \"HEAT_OF_REACTION({}) = {}\"}\n",
     "    \n",
@@ -506,24 +556,20 @@
     "        self.heat_of_reac = heat_of_reac\n",
     "        \n",
     "        self.param_base = [['init', self.init], \n",
-    "                           ['density', self.density], \n",
     "                           ['emissivity', self.emissivity], \n",
+    "                           ['density', self.density], \n",
     "                           ['conductivity', self.conductivity], \n",
-    "                           ['specific_heat', self.specific_heat], \n",
-    "                           ['heat_of_comb', self.heat_of_comb], \n",
-    "                           ['heat_of_reac', self.heat_of_reac]]\n",
+    "                           ['specific_heat', self.specific_heat]]#, \n",
+    "                           #['heat_of_comb', self.heat_of_comb], \n",
+    "                           #['heat_of_reac', self.heat_of_reac]]\n",
     "        \n",
     "        self.param_base_dict = {'init': self.init, \n",
-    "                                'density': self.density, \n",
     "                                'emissivity': self.emissivity, \n",
+    "                                'density': self.density, \n",
     "                                'conductivity': self.conductivity, \n",
-    "                                'specific_heat': self.specific_heat, \n",
-    "                                'heat_of_comb': self.heat_of_comb, \n",
-    "                                'heat_of_reac': self.heat_of_reac}\n",
-    "        \n",
-    "        self.mp = {'init': self.init, \n",
-    "                   'density': self.density, \n",
-    "                   'emissivity': self.emissivity}\n",
+    "                                'specific_heat': self.specific_heat}#, \n",
+    "                                #'heat_of_comb': self.heat_of_comb, \n",
+    "                                #'heat_of_reac': self.heat_of_reac}\n",
     "        \n",
     "        self.reactions = []\n",
     "        \n",
@@ -581,10 +627,7 @@
     "        num_reac = len(self.reactions)\n",
     "        reac_count = 1\n",
     "        \n",
-    "        if num_reac is 0:\n",
-    "            print('no reac')\n",
-    "        \n",
-    "        for component in self.param_base[:-2]:\n",
+    "        for component in self.param_base[:]:\n",
     "            idfr = '{}'.format(component[0])\n",
     "            \n",
     "            if self.param_base_dict[idfr] is not None:\n",
@@ -595,9 +638,11 @@
     "                new_c = comp.format(self.param_base_dict[idfr])\n",
     "                #print(new_c)\n",
     "                matl_lines.append(new_c + ',')\n",
-    "            \n",
-    "        new_c = \"      \" + self.matl_temp['n_reactions'].format(num_reac)\n",
-    "        matl_lines.append(new_c + ',')\n",
+    "        \n",
+    "        if num_reac is not 0:\n",
+    "            # print('no reac')\n",
+    "            new_c = \"      \" + self.matl_temp['n_reactions'].format(num_reac)\n",
+    "            matl_lines.append(new_c + ',')\n",
     "        \n",
     "        for reac_dict in self.reactions:\n",
     "            \n",
@@ -610,7 +655,23 @@
     "                    matl_lines.append(new_c + ',')\n",
     "            reac_count += 1\n",
     "        \n",
-    "        matl_lines[-1] = matl_lines[-1][:-1] + ' /'\n",
+    "# #         for component in self.param_base[-2:]:\n",
+    "# #             idfr = '{}'.format(component[0])\n",
+    "            \n",
+    "#             if self.param_base_dict[idfr] is not None:\n",
+    "#                 comp = self.matl_temp[idfr]\n",
+    "#                 if component[0] is not 'init':\n",
+    "#                     comp = '      ' + comp\n",
+    "                \n",
+    "#                 new_c = comp.format(reac_count, \n",
+    "#                                     self.param_base_dict[idfr])\n",
+    "#                 #print(new_c)\n",
+    "#                 matl_lines.append(new_c + ',')\n",
+    "        \n",
+    "#         new_c = \"      \" + self.matl_temp['n_reactions'].format(num_reac)\n",
+    "#         matl_lines.append(new_c + ',')\n",
+    "        \n",
+    "        matl_lines[-1] = matl_lines[-1][:-1] + ' /\\n'\n",
     "        \n",
     "        if show is True:\n",
     "            for line in matl_lines:\n",
@@ -669,11 +730,12 @@
     "        string_temp = \"  {}: {}\\n\"\n",
     "        output = '* Parameter: value\\n' \\\n",
     "                 '------------------\\n'\n",
-    "        for i in self.mp:\n",
-    "            output += string_temp.format(i, self.mp['{}'.format(i)])\n",
+    "        for i in self.param_base_dict:\n",
+    "            output += string_temp.format(i, self.param_base_dict['{}'.format(i)])\n",
     "        \n",
     "        output += '------------------\\n\\n'\n",
     "        return output\n",
+    "\n",
     "\n",
     "\n",
     "fm2 = fds_matl_2('MaterialTest01', density=100., emissivity=0.1, \n",
@@ -686,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -696,8 +758,10 @@
       "* Parameter: value\n",
       "------------------\n",
       "  init: MaterialTest02\n",
-      "  density: 200.0\n",
       "  emissivity: 0.2\n",
+      "  density: 200.0\n",
+      "  conductivity: None\n",
+      "  specific_heat: None\n",
       "------------------\n",
       "\n",
       "\n",
@@ -716,7 +780,7 @@
       "  nu_spec: None\n",
       "  spec_id: None\n",
       "  heat_of_comb: None\n",
-      "  heat_of_reac: None\n",
+      "  heat_of_reac: 1100\n",
       "\n",
       "* Reaction: 2\n",
       "  Parameter: value\n",
@@ -728,35 +792,40 @@
       "  matl_id: None\n",
       "  nu_spec: None\n",
       "  spec_id: None\n",
-      "  heat_of_comb: None\n",
+      "  heat_of_comb: 1200\n",
       "  heat_of_reac: None\n",
       "------------------\n",
       "\n",
       "\n",
       "&MATL ID = 'MaterialTest02',\n",
-      "      DENSITY = 200.0,\n",
       "      EMISSIVITY = 0.2,\n",
+      "      DENSITY = 200.0,\n",
       "      N_REACTIONS = 2,\n",
       "      A(1) = 120.0,\n",
       "      E(1) = 200,\n",
+      "      HEAT_OF_REACTION(1) = 1100,\n",
       "      A(2) = 221.0,\n",
-      "      E(2) = 210 /\n"
+      "      E(2) = 210,\n",
+      "      HEAT_OF_COMBUSTION(2) = 1200 /\n",
+      "\n"
      ]
     },
     {
      "data": {
       "text/plain": [
        "[\"&MATL ID = 'MaterialTest02',\",\n",
-       " '      DENSITY = 200.0,',\n",
        " '      EMISSIVITY = 0.2,',\n",
+       " '      DENSITY = 200.0,',\n",
        " '      N_REACTIONS = 2,',\n",
        " '      A(1) = 120.0,',\n",
        " '      E(1) = 200,',\n",
+       " '      HEAT_OF_REACTION(1) = 1100,',\n",
        " '      A(2) = 221.0,',\n",
-       " '      E(2) = 210 /']"
+       " '      E(2) = 210,',\n",
+       " '      HEAT_OF_COMBUSTION(2) = 1200 /\\n']"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -765,8 +834,8 @@
     "fm3 = None\n",
     "fm3 = fds_matl_2('MaterialTest02', density=200., emissivity=0.2)\n",
     "\n",
-    "fm3.add_reaction(a=1.2e+2,e=200)\n",
-    "fm3.add_reaction(a=2.21e+2,e=210)\n",
+    "fm3.add_reaction(a=1.2e+2,e=200, heat_of_reac=1100)\n",
+    "fm3.add_reaction(a=2.21e+2,e=210, heat_of_comb=1200)\n",
     "\n",
     "print(fm3)\n",
     "# print(fm3.reactions)\n",
@@ -776,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -786,8 +855,10 @@
       "* Parameter: value\n",
       "------------------\n",
       "  init: MaterialTest03\n",
-      "  density: 300.0\n",
       "  emissivity: 0.3\n",
+      "  density: 300.0\n",
+      "  conductivity: None\n",
+      "  specific_heat: None\n",
       "------------------\n",
       "\n",
       "\n",
@@ -825,19 +896,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* Parameter: value\n",
+      "------------------\n",
+      "  init: MaterialTest03\n",
+      "  emissivity: 0.3\n",
+      "  density: 300.0\n",
+      "  conductivity: None\n",
+      "  specific_heat: None\n",
+      "------------------\n",
+      "\n",
+      "\n",
+      "\n",
+      "* Reactions overview:\n",
+      "  Total: 1 reaction(s)\n",
+      "\n",
+      "* Reaction: 1\n",
+      "  Parameter: value\n",
+      "------------------\n",
+      "  a: 320.0\n",
+      "  e: 600\n",
+      "  n_s: None\n",
+      "  nu_matl: None\n",
+      "  matl_id: None\n",
+      "  nu_spec: None\n",
+      "  spec_id: None\n",
+      "  heat_of_comb: None\n",
+      "  heat_of_reac: None\n",
+      "------------------\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# fm5 = None\n",
+    "fm5 = fds_matl_2('MaterialTest03', density=300., emissivity=0.3, a=3.2e+2,e=600)\n",
+    "\n",
+    "\n",
+    "print(fm5)\n",
+    "# print(fm4.reactions)\n",
+    "fm5.show_reactions()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -858,7 +969,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
