Added TGA_ANALYSIS parameters to SURF.

--- a/PrototypingMaterialsFDS.ipynb
+++ b/PrototypingMaterialsFDS.ipynb
@@ -409,7 +409,10 @@
     "    \n",
     "    surf_temp = {'init': \"&SURF ID = '{}'\", \n",
     "                 'ext_flux': \"EXTERNAL_FLUX = {}\", \n",
-    "                 'rgb': \"RGB = {}\", \n",
+    "                 'rgb': \"RGB = {}\",\n",
+    "                 'tga_analysis': \"TGA_ANALYSIS = .{}.\",\n",
+    "                 'tga_heat_rate': \"TGA_HEATING_RATE = {}\",\n",
+    "                 'tga_fin_temp': \"TGA_FINAL_TEMPERATURE = {}\", \n",
     "                 'backing': \"BACKING = '{}'\", \n",
     "                 'cell_size_fac': \"CELL_SIZE_FACTOR = {}\", \n",
     "                 'burn_away': \"BURN_AWAY = .{}.\", \n",
@@ -418,14 +421,19 @@
     "                 'matl_id': \"MATL_ID({}) = '{}'\", \n",
     "                 'matl_mass_frac': \"MATL_MASS_FRACTION({}) = '{}'\", }\n",
     "    \n",
-    "    def __init__(self, init, ext_flux=None, rgb=None, \n",
-    "                 backing=None, cell_size_fac=None, burn_away=None, \n",
+    "    def __init__(self, init, ext_flux=None, rgb=None,  \n",
+    "                 tga_analysis=None, tga_heat_rate=None, \n",
+    "                 tga_fin_temp=None, backing=None, \n",
+    "                 cell_size_fac=None, burn_away=None, \n",
     "                 layer_div=None, thickness=None, matl_id=None, \n",
     "                 matl_mass_frac=None,):\n",
     "        \n",
     "        self.init = init\n",
     "        self.ext_flux = ext_flux\n",
     "        self.rgb = rgb\n",
+    "        self.tga_analysis = tga_analysis\n",
+    "        self.tga_heat_rate = tga_heat_rate\n",
+    "        self.tga_fin_temp = tga_fin_temp\n",
     "        self.backing = backing\n",
     "        self.cell_size_fac = cell_size_fac\n",
     "        self.burn_away = burn_away\n",
@@ -437,6 +445,9 @@
     "    self.param_base = [['init', self.init], \n",
     "                       ['ext_flux', self.ext_flux], \n",
     "                       ['rgb', self.rgb], \n",
+    "                       ['tga_analysis', self.tga_analysis],\n",
+    "                       ['tga_heat_rate', self.tga_heat_rate],\n",
+    "                       ['tga_fin_temp', self.tga_fin_temp],\n",
     "                       ['backing', self.backing], \n",
     "                       ['cell_size_fac', self.cell_size_fac],\n",
     "                       ['burn_away', self.burn_away],\n",
@@ -447,14 +458,26 @@
     "        \n",
     "    self.param_base_dict = {'init': self.init, \n",
     "                            'ext_flux': self.ext_flux, \n",
-    "                            'rgb': self.rgb, \n",
+    "                            'rgb': self.rgb,\n",
+    "                            'tga_analysis': self.tga_analysis,\n",
+    "                            'tga_heat_rate': self.tga_heat_rate,\n",
+    "                            'tga_fin_temp': self.tga_fin_temp,\n",
     "                            'backing': self.backing, \n",
     "                            'cell_size_fac': self.cell_size_fac,\n",
     "                            'burn_away': self.burn_away,\n",
     "                            'layer_div': self.layer_div,\n",
     "                            'thickness': self.thickness,\n",
     "                            'matl_id': self.matl_id,\n",
-    "                            'matl_mass_frac': self.matl_mass_frac,}"
+    "                            'matl_mass_frac': self.matl_mass_frac,}\n",
+    "    \n",
+    "    def compile_surf(self, show=False):\n",
+    "        surf_lines = []\n",
+    "        \n",
+    "        if show is True:\n",
+    "            for line in surf_lines:\n",
+    "                print(line)\n",
+    "        \n",
+    "        return surf_lines"
    ]
   },
   {
