Functionality to add materials to as surface.

--- a/PrototypingMaterialsFDS.ipynb
+++ b/PrototypingMaterialsFDS.ipynb
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,42 +442,143 @@
     "        self.matl_id = matl_id\n",
     "        self.matl_mass_frac = matl_mass_frac\n",
     "        \n",
-    "    self.param_base = [['init', self.init], \n",
-    "                       ['ext_flux', self.ext_flux], \n",
-    "                       ['rgb', self.rgb], \n",
-    "                       ['tga_analysis', self.tga_analysis],\n",
-    "                       ['tga_heat_rate', self.tga_heat_rate],\n",
-    "                       ['tga_fin_temp', self.tga_fin_temp],\n",
-    "                       ['backing', self.backing], \n",
-    "                       ['cell_size_fac', self.cell_size_fac],\n",
-    "                       ['burn_away', self.burn_away],\n",
-    "                       ['layer_div', self.layer_div],\n",
-    "                       ['thickness', self.thickness],\n",
-    "                       ['matl_id', self.matl_id],\n",
-    "                       ['matl_mass_frac', self.matl_mass_frac],]\n",
+    "        self.param_base = [['init', self.init], \n",
+    "                           ['ext_flux', self.ext_flux], \n",
+    "                           ['rgb', self.rgb], \n",
+    "                           ['tga_analysis', self.tga_analysis],\n",
+    "                           ['tga_heat_rate', self.tga_heat_rate],\n",
+    "                           ['tga_fin_temp', self.tga_fin_temp],\n",
+    "                           ['backing', self.backing], \n",
+    "                           ['cell_size_fac', self.cell_size_fac],\n",
+    "                           ['burn_away', self.burn_away],\n",
+    "                           ['layer_div', self.layer_div]]#,\n",
+    "                           #['thickness', self.thickness],\n",
+    "                           #['matl_id', self.matl_id],\n",
+    "                           #['matl_mass_frac', self.matl_mass_frac],]\n",
+    "\n",
+    "        self.param_base_dict = {'init': self.init, \n",
+    "                                'ext_flux': self.ext_flux, \n",
+    "                                'rgb': self.rgb,\n",
+    "                                'tga_analysis': self.tga_analysis,\n",
+    "                                'tga_heat_rate': self.tga_heat_rate,\n",
+    "                                'tga_fin_temp': self.tga_fin_temp,\n",
+    "                                'backing': self.backing, \n",
+    "                                'cell_size_fac': self.cell_size_fac,\n",
+    "                                'burn_away': self.burn_away,\n",
+    "                                'layer_div': self.layer_div}#,\n",
+    "                                #'thickness': self.thickness,\n",
+    "                                #'matl_id': self.matl_id,\n",
+    "                                #'matl_mass_frac': self.matl_mass_frac,}\n",
+    "    \n",
+    "        self.materials = []\n",
     "        \n",
-    "    self.param_base_dict = {'init': self.init, \n",
-    "                            'ext_flux': self.ext_flux, \n",
-    "                            'rgb': self.rgb,\n",
-    "                            'tga_analysis': self.tga_analysis,\n",
-    "                            'tga_heat_rate': self.tga_heat_rate,\n",
-    "                            'tga_fin_temp': self.tga_fin_temp,\n",
-    "                            'backing': self.backing, \n",
-    "                            'cell_size_fac': self.cell_size_fac,\n",
-    "                            'burn_away': self.burn_away,\n",
-    "                            'layer_div': self.layer_div,\n",
-    "                            'thickness': self.thickness,\n",
-    "                            'matl_id': self.matl_id,\n",
-    "                            'matl_mass_frac': self.matl_mass_frac,}\n",
+    "        # Attempt to handle cases with only one material.\n",
+    "        self.matl_param_base = [['thickness', self.thickness],\n",
+    "                                ['matl_id', self.matl_id],\n",
+    "                                ['matl_mass_frac', self.matl_mass_frac]]\n",
+    "        \n",
+    "        for i in self.matl_param_base:\n",
+    "            if i is not None:\n",
+    "                self.add_material(self.thickness,\n",
+    "                                  self.matl_id,\n",
+    "                                  self.matl_mass_frac)\n",
+    "                break\n",
+    "    \n",
+    "    def add_material(self, \n",
+    "                     thickness=None, \n",
+    "                     matl_id=None, \n",
+    "                     matl_mass_frac=None):\n",
+    "        \n",
+    "        self.thickness = thickness\n",
+    "        self.matl_id = matl_id\n",
+    "        self.matl_mass_frac = matl_mass_frac\n",
+    "        \n",
+    "        new_matl = {'thickness': self.thickness, \n",
+    "                    'matl_id': self.matl_id, \n",
+    "                    'matl_mass_frac': self.matl_mass_frac}\n",
+    "        \n",
+    "        self.materials.append(new_matl)\n",
     "    \n",
     "    def compile_surf(self, show=False):\n",
     "        surf_lines = []\n",
+    "        num_matl = len(self.materials)\n",
+    "        print(self.materials)\n",
+    "        matl_count = 1\n",
+    "        \n",
+    "        for component in self.param_base[:]:\n",
+    "            idfr = '{}'.format(component[0])\n",
+    "            \n",
+    "            if self.param_base_dict[idfr] is not None:\n",
+    "                comp = self.surf_temp[idfr]\n",
+    "                if component[0] is not 'init':\n",
+    "                    comp = '      ' + comp\n",
+    "                \n",
+    "                new_c = comp.format(self.param_base_dict[idfr])\n",
+    "                #print(new_c)\n",
+    "                surf_lines.append(new_c + ',')\n",
+    "        \n",
+    "        # Add different materials.\n",
+    "        for matl_dict in self.materials:\n",
+    "            \n",
+    "            for matl_para in self.matl_param_base:\n",
+    "                idfr = '{}'.format(matl_para[0])\n",
+    "                \n",
+    "                if matl_dict[idfr] is not None:\n",
+    "                    new_c = \"      \" + self.surf_temp[idfr].format(matl_count, \n",
+    "                                                                   matl_dict[idfr])\n",
+    "                    surf_lines.append(new_c + ',')\n",
+    "            matl_count += 1\n",
+    "            \n",
+    "        surf_lines[-1] = surf_lines[-1][:-1] + ' /\\n'\n",
     "        \n",
     "        if show is True:\n",
     "            for line in surf_lines:\n",
     "                print(line)\n",
     "        \n",
     "        return surf_lines"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'thickness': 0.5, 'matl_id': None, 'matl_mass_frac': None}]\n",
+      "&SURF ID = 'Cable 219 plastic',\n",
+      "      EXTERNAL_FLUX = 25.0,\n",
+      "      RGB = 200,100,0,\n",
+      "      BACKING = 'EXPOSED',\n",
+      "      BURN_AWAY = .TRUE.,\n",
+      "      THICKNESS(1) = 0.5 /\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[\"&SURF ID = 'Cable 219 plastic',\",\n",
+       " '      EXTERNAL_FLUX = 25.0,',\n",
+       " '      RGB = 200,100,0,',\n",
+       " \"      BACKING = 'EXPOSED',\",\n",
+       " '      BURN_AWAY = .TRUE.,',\n",
+       " '      THICKNESS(1) = 0.5 /\\n']"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fs1 = FDSSURF('Cable 219 plastic', ext_flux=25., rgb='200,100,0', \n",
+    "                 backing='EXPOSED', burn_away='TRUE', thickness=0.5)\n",
+    "\n",
+    "nsl = fs1.compile_surf(show=True)\n",
+    "nsl"
    ]
   },
   {
